# pqcom

./: .gitmodules  README.md
code/pqui/: CMakeLists.txt  myfile.txt  test.sh
code/pqui/auto_rx/: auto_rx.sh  dfm09mod  dft_detect  fsk_demod  imet4iq  imet54mod  iq_dec  lms6Xmod  log_power_0.csv  m10mod  m20mod  meisei100mod  mk2a1680mod  mp3h1mod  mts01mod  rs41mod  rs92mod  station.cfg  weathex301d
code/pqui/data/: 100_h_devttyUSB0_2023_11_04.13.06.20.609.txt  122_h_devttyUSB0_2023_11_04.14.01.04.556.txt  122_v_devttyUSB0_2023_11_04.13.58.52.794.txt  20231010-081400Z_-32.9716_18.1562_standard_profile_2023101000Z.csv  TableMountain.csv  liglig.txt  pointingTest.csv  sundayDay_prediction.csv  sundayDay_prediction.kml  tableMountainToSimonsberg11.csv  tableMountainToSimonsberg12.csv  tableMountainToSimonsberg13.csv  tableMountainToSimonsberg14.csv  tableMountainToSimonsberg15.csv  tableMountainToSimonsberg16.csv  v_70_devttyUSB0_2023_11_04.12.00.48.283.txt  v_70_devttyUSB0_2023_11_04.12.01.37.095.txt
code/pqui/data/old/: TableMountain.csv
code/pqui/include/: MainWindow.h  Serial.h  Suncq.h
code/pqui/radiosonde_auto_rx/auto_rx/autorx/static/font/: autorx.eot:Zone.Identifier
code/pqui/src/: MainWindow.cpp  Serial.cpp  main.cpp
code/pqui/ui/: MainWindow.ui
documents/: PQGS_Protocol.docx  SUNCQ_Protocol.docx  ~$GS_Protocol.docx
kicad/: GS_PQ_BOM.xlsx
link/: link-budget.sh  output.txt
link-budget/: link-budget.sh  output.txt
report/: 23905093_Allen_GVC_skripsie2023.pdf:Zone.Identifier  references.bib  report.tex
testing/: Pointing.docx  pointing.csv  (+3 more)
(+458 files in other folders)
